--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "lodash": "^4.17.21",
     "pinia": "^2.0.14",
-    "vue": "^3.2.2"
+    "vue": "^3.2.2",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
